--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "knex": "^0.16.3",
+    "path": "^0.12.7",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
